tests/CodeTest.php
<?php
// /*
// Нажмите кнопку run чтобы запустить тесты.
// Попробуйте изменять код функции / тестов, запуская проверки заново.
// */

// require("./src/Code.php");
// require("../vendor/autoload.php");

// use Webmozart\Assert\Assert;
// use function Code\capitalize;

// // eq означает equal
// Assert::eq(capitalize(''), '');
// // Первый параметр actual – то, что пришло
// // Второй параметр expected – то, что ожидает тест
// // Правильный порядок аргументов имеет большое значение при анализе ошибки
// Assert::eq(capitalize('test'), 'Test');
// // Assert::notEq(capitalize('test'), 'test'); // error